# peft-rs

./: .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISION.md  METRICS.md  PR_TEMPLATE.md  README.md  roadmap.md
.github/skills/peft-adapter-design/: SKILL.md
.github/workflows/: ci.yml  fleet-ci.yml  fleet-security.yml  release.yml
benches/: adapters.rs
docs/: AGENT_GUIDE.md  DEPENDENCIES.md  DEVELOPMENT_PLAN.md  GAP_ANALYSIS.md  PLAN_SUMMARY.md  RELEASE_PROCESS.md  TASK_TRACKER.md
examples/: basic_lora.rs  lora_inject_train.rs  multi_adapter.rs  save_load.rs
scripts/: gen_lora_parity_fixture.py  pre-commit.sh  quality-check.sh  release.sh  setup-dev.sh  verify-gpg.sh
src/: config.rs  error.rs  hf.rs  inference.rs  io.rs  lib.rs  model.rs  quant.rs  registry.rs  training.rs  traits.rs
src/adapters/: adalora.rs  boft.rs  ia3.rs  loha.rs  lokr.rs  lora.rs  mod.rs  oft.rs  prefix_tuning.rs  prompt_tuning.rs  vera.rs
src/kernels/: dora.rs  lora.rs  mod.rs
src/kernels/archive/: README.md
tests/: hf_roundtrip.rs  inject_train.rs  parity_lora.rs
tests/parity/: README.md
tests/parity/fixtures/: lora_fwd_merge.json
