[package]
name = "peft-rs"
version = "1.0.3"
edition = "2021"
rust-version = "1.92"
license = "MIT"
description = "Comprehensive PEFT (Parameter-Efficient Fine-Tuning) adapter library for Rust"
repository = "https://github.com/tzervas/peft-rs"
keywords = ["peft", "lora", "machine-learning", "fine-tuning", "llm"]
categories = ["science"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# GPU support via CubeCL (optional)
cubecl = { workspace = true, optional = true }
cubecl-cuda = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.5"
anyhow = { workspace = true }
tempfile = "3.0"

[features]
default = []
cuda = ["candle-core/cuda", "dep:cubecl", "dep:cubecl-cuda"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"

[[bench]]
name = "adapters"
harness = false

[workspace]

[workspace.dependencies]
candle-core = "0.9"
candle-nn = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.7"
thiserror = "2.0"
tracing = "0.1"
cubecl = "0.9"
cubecl-cuda = "0.9"
criterion = "0.5"
anyhow = "1.0"
