[package]
name = "peft-rs"
version = "1.0.4"
edition = "2021"
rust-version = "1.92"
license = "MIT"
description = "Candle PEFT adapter layer library (LoRA/DoRA/etc. layer math for Rust)"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
repository = "https://github.com/tzervas/peft-rs"
keywords = ["peft", "lora", "machine-learning", "fine-tuning", "llm"]
categories = ["science"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
anyhow = "1.0"
tempfile = "3.0"

[features]
default = []
cuda = ["candle-core/cuda"]

[lints]
workspace = true

[[bench]]
name = "adapters"
harness = false

[[example]]
name = "basic_lora"
path = "examples/basic_lora.rs"

[[example]]
name = "multi_adapter"
path = "examples/multi_adapter.rs"

[[example]]
name = "save_load"
path = "examples/save_load.rs"

[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
candle-core = "0.9"
candle-nn = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.7"
thiserror = "2.0"
tracing = "0.1"
criterion = "0.5"
proptest = "1.5"
anyhow = "1.0"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
